gateway-api/greeter-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: greeter-server
    app.kubernetes.io/component: greeter-server
    app.kubernetes.io/instance: greeter-server
  name: greeter-server
  namespace: gwapi-test
spec:
  ports:
  - name: grpc
    port: 50051
    protocol: TCP
    targetPort: grpc
  selector:
    deployment: greeter-server
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: greeter-server
    app.kubernetes.io/component: greeter-server
    app.kubernetes.io/instance: greeter-server
  name: greeter-server
  namespace: gwapi-test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: greeter-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: greeter-server
    spec:
      containers:
      - image: ghcr.io/nutmos/greeter-server@sha256:0c0ba116ee26f1de2546cd725ccd55a8c16970774a6eb8a1c4b04d86428ee51f
        imagePullPolicy: IfNotPresent
        name: greeter-server
        ports:
        - containerPort: 50051
          name: grpc
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
