gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
  namespace: demo
spec:
  gatewayClassName: istio
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: default
    port: 80
    protocol: HTTP
    hostname: "httpd.greeter.${CLUSTER_NAME}"
  - allowedRoutes:
      namespaces:
        from: All
    name: default-https
    port: 443
    protocol: HTTPS
    hostname: "httpd.greeter.${CLUSTER_NAME}"
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: greeter-cert
  - allowedRoutes:
      namespaces:
        from: All
    name: grpc
    port: 50051
    protocol: HTTPS
    hostname: "gateway.greeter.${CLUSTER_NAME}"
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: greeter-cert
