gateway-api/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: greeter-server
spec:
  parentRefs:
  - name: default-gateway
  hostnames:
  - "gateway.greeter.cluster-tf4q6.tf4q6.sandbox3743.opentlc.com"
  rules:
  - backendRefs:
    - name: greeter-server
      port: 50051
