gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpd
  namespace: gwapi-test
spec:
  parentRefs:
  - name: default-gateway
  hostnames:
  - "httpd.greeter.${CLUSTER_NAME}"
  rules:
  - backendRefs:
    - name: httpd
      port: 8080
